# one-influxdb

./: .gitignore  Dockerfile  Pipfile  README.md  dev.sh  docker-compose.yml  one-influxdb.py  pyproject.toml  run.sh
.github/workflows/: ci-build.yml
dashboards/: opennebula-datastore-overview.json  opennebula-overview.json  opennebula-vdc.json  opennebula-vm.json  opennebula-vmm-host.json
